# juragpt-unified

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
monitoring/prometheus/: alerts.yml  prometheus.yml
scripts/: migrate_services.sh
services/document/: .env.example  Dockerfile  mypy.ini  pytest.ini  requirements-dev.txt  requirements.txt
services/embedder/: Dockerfile  main.py  requirements.txt
services/orchestrator/: main.py
services/retrieval/: DATA_SOURCES_RESEARCH.md  DEPLOYMENT.md  requirements.txt
services/verification/: Dockerfile  alembic.ini  docker-compose.example.yml  pyproject.toml  requirements.txt
services/verification/alembic/: README.md  env.py
services/verification/alembic/versions/: 20251030_1530_initial_schema.py
services/verification/auditor/: factory.py
services/verification/auditor/api/: auth_endpoints.py  models.py  server.py
services/verification/auditor/config/: settings.py
services/verification/auditor/core/: confidence_engine.py  fingerprint_tracker.py  semantic_matcher.py  sentence_processor.py  verification_service.py
services/verification/auditor/domains/: __init__.py  base.py  generic.py  registry.py
services/verification/auditor/domains/legal/: __init__.py  base.py  german.py
services/verification/auditor/languages/: __init__.py  base.py  german.py  multilingual.py
services/verification/auditor/security/: __init__.py  auth.py  headers.py  rate_limit.py
services/verification/auditor/storage/: database.py  storage_interface.py
services/verification/data/: README.md  cases.json  edge_cases.json  laws.json  mock_answers.json  mock_queries.json
services/verification/docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER.md  MONITORING.md  PERFORMANCE_TESTING.md
services/verification/tests/: conftest.py  test_performance.py
services/verification/tests/edge_cases/: __init__.py  test_edge_cases.py
services/verification/tests/integration/: __init__.py  test_api.py
services/verification/tests/performance/: README.md  benchmark.py  locust.conf  locustfile.py  memory_profile.py  scenarios.sh
services/verification/tests/security/: test_auth.py  test_headers.py  test_rate_limit.py
services/verification/tests/unit/: test_confidence_engine.py  test_fingerprint_tracker.py  test_semantic_matcher.py  test_sentence_processor.py  test_storage_interface.py
tests/: test_integration_orchestrator.py  test_smoke.py
tests/document/: COMPREHENSIVE_TEST_REPORT.md  OCR_INTEGRATION_TEST_RESULTS.md  conftest.py  test_api.py  (+20 more)
(+69 files in other folders)
